--- a/src/css/common.css
+++ b/src/css/common.css
@@ -16,3 +16,23 @@ img {
   display: block;
   max-width: 100%;
 }
+
+/* ==== 02-timer ==== */
+.timer {
+  display: flex;
+  gap: 40px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.value {
+  font-size: 60px;
+}
+
+.label {
+  text-transform: uppercase;
+}
